--- a/src/Domain/Objects/Translation/translation.yml
+++ b/src/Domain/Objects/Translation/translation.yml
@@ -3,6 +3,7 @@ description: Holds information relevant to create/analyse source files in given 
 attributes:
   - name: lexicon
     description: The translation's vocabulary which is a collection of token-like objects
+    comment: It is a map to be more precise
     # TODO: make possible to use Maps and Sets as types
     type: object
     required: true
